# DNA-Analyzer-System

./: README.md  diagram.mdj  manager.h  model.mdj
code/: CMakeLists.txt  SharedPtr.h  a  a.out  cli.cpp  cli.h  data.cpp  data.h  icli.cpp  icli.h  icommand.cpp  icommand.h  main.cpp  manager.cpp  manager.h  meta_data.cpp  meta_data.h  parser.cpp  parser.h
code/commands/: icommand.h
code/commands/usecase/: Help.cpp  Help.h  load.cpp  load.h  new.cpp  new.h  save.cpp  save.h
code/controller/: CallBack.cpp  CallBack.h  Controller.cpp  Controller.h  allCommands.h  commands_container.cpp  commands_container.h  parser.h
code/controller/commands/: IParameters.h  icommand.h
code/controller/commands/analysis/count/: Count.cpp  Count.h  CountParams.cpp  CountParams.h
code/controller/commands/analysis/find/: Find.cpp  Find.h  FindParams.cpp  FindParams.h
code/controller/commands/analysis/findAll/: FindAll.cpp  FindAll.h  FindAllParams.cpp  FindAllParams.h
code/controller/commands/analysis/len/: Len.cpp  Len.h  LenParams.cpp  LenParams.h
code/controller/commands/control/help/: Help.cpp  Help.h  HelpParams.cpp  HelpParams.h
code/controller/commands/creation/load/: LoadParams.cpp  LoadParams.h  load.cpp  load.h
code/controller/commands/creation/new/: NewParams.cpp  NewParams.h  new.cpp  new.h
code/controller/commands/management/save/: SaveParams.cpp  SaveParams.h  save.cpp  save.h
code/controller/commands/manipulation/: Colon.cpp  Colon.h
code/controller/commands/manipulation/replace/: Replace.cpp  Replace.h  ReplaceParams.cpp  ReplaceParams.h
code/controller/commands/manipulation/slice/: Slice.cpp  Slice.h  SliceParams.cpp  SliceParams.h
code/controller/commands/parameters/: IParameters.h  NewParams.h
code/controller/commands/usecase/: Count.cpp  Count.h  Find.cpp  Find.h  Help.cpp  Help.h  Len.cpp  Len.h  Replace.cpp  Replace.h  Slice.cpp  Slice.h  load.cpp  load.h  new.cpp  new.h  save.cpp  save.h
code/controller/errors/: CommandNotFound.h  InvalidDna.h  NotFound.h
code/controller/read_write/: DnaReader.cpp  DnaReader.h  DnaWriter.cpp  DnaWriter.h
code/dna/: DnaSequence.cpp  DnaSequence.h  InvalidDna.cpp  InvalidDna.h
code/dna_data/: data.cpp  data.h  meta_data.h
code/errors/: DnaException.h  InvalidCommand.h  OpenFileError.h
code/interface/: cli.h  input_output.cpp
code/manager/: Controller.cpp  Controller.h  commands_container.cpp  commands_container.h  manager.cpp  manager.h  parser.cpp  parser.h
code/model/dna/: DnaSequence.cpp  DnaSequence.h  IDnaSequence.h  Nucleotide.h
code/model/dna/dnaDecorators/: ReplaceDecorator.cpp  ReplaceDecorator.h  SliceDecorator.cpp  SliceDecorator.h
code/model/dna_data/: data.cpp  data.h  meta_data.h
code/model/read_write/: DNAReader.cpp  DNAReader.h  DnaReader.cpp  DnaReader.h  DnaWriter.cpp  DnaWriter.h
code/usecase/: load.cpp  load.h  new.cpp  new.h  save.cpp  save.h
code/view/: parser.cpp  parser.h
code/view/interface/: UI.h  cli.cpp  cli.h  input_output.h
